<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/hot"
                android:icon="@drawable/ic_menu_hot"
                android:title="@string/menu_hot" android:checked="true"/>
        <item
                android:id="@+id/movie"
                android:icon="@drawable/ic_movie_menu"
                android:title="@string/menu_movie"/>
        <item
                android:id="@+id/tv"
                android:icon="@drawable/ic_tv_menu"
                android:title="@string/menu_tv"/>

        <item
                android:id="@+id/novel"
                android:icon="@drawable/ic_novel_menu"
                android:title="@string/menu_novel"/>

    </group>

    <group android:checkableBehavior="none" android:id="@+id/setting">
        <item
                android:id="@+id/about"
                android:title="@string/menu_about"/>
    </group>


</menu>
